# remote-temperature

./: README.md
remote-temperature-client/: setup.cfg  snapcraft.yaml
remote-temperature-client/remotetemperature/client/: __init__.py
remote-temperature-server/: setup.cfg
remote-temperature-server/remotetemperature/server/: __init__.py
test/: test_remote_temperature.py
test/w1thermsensor/: __init__.py
