[metadata]
name = remote-temperature-server
version = 0.0.1
author = Jonathan Haigh
author_email = jonathanhaigh@gmail.com
description = Database service to record temperature data from remote clients
url = https://github.com/jonathanhaigh/remote-temperature
project_urls =
    Bug Tracker = https://github.com/jonathanhaigh/remote-temperature/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6
install_requires=
    python-daemon

[options.entry_points]
    console_scripts =
        remote-temperature-server = remotetemperature.server:main
